# quasai

./: .dockerignore  .gitignore  Agents.md  Dockerfile  README.md  Spec.md  docker-compose.yml  install.ps1  install.sh  pyproject.toml  run.ps1  run.sh
.github/workflows/: docker.yml
docs/: CodeFormatting.md  DocsFormatting.md  FunctionalRequirements.md  FunctionalRequirementsTests.md  NonFunctionalRequirements.md  NonFunctionalRequirementsTests.md  RequirementsReview.md
input/: test-small.md
src/quasai/: cli.py  generator.py  parser.py  serializer.py  types.py
tests/: test_cli.py  test_generator.py  test_parser.py  test_serializer.py
