[project]
name = "quasai"
version = "0.1.0"
description = "Local test case generation service"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "httpx>=0.28",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.24"]

[project.scripts]
quasai = "quasai.cli:app"
